updated executor to java 8

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ workflows:
           context:
             - OSSRH
             - SLACK
+          executor: marvel/java8
           filters:
             branches:
               ignore:
