--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
     <url>https://github.com/scoperetail-io/${project.artifactId}</url>
     <scm>
         <developerConnection>
-            scm:git:git@github.com:scoperetail-io/${project.artifactId}.git
+            scm:git:git@github.com:fusion-oss/${project.artifactId}.git
         </developerConnection>
         <tag>HEAD</tag>
-        <url>https://github.com/scoperetail-io/${project.artifactId}</url>
+        <url>https://github.com/fusion-oss/${project.artifactId}</url>
     </scm>
 
     <properties>
