--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <version>0.1-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>Jaxb utility library</description>
-    <url>https://github.com/scoperetail-io/${project.artifactId}</url>
+    <url>https://github.com/fusion-oss/${project.artifactId}</url>
     <scm>
         <developerConnection>
             scm:git:git@github.com:fusion-oss/${project.artifactId}.git
