--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>com.scoperetail.commons</groupId>
     <artifactId>commons-jaxb-java-8</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <name>${project.artifactId}</name>
     <description>Jaxb utility library</description>
     <url>https://github.com/fusion-oss/${project.artifactId}</url>
@@ -16,7 +16,7 @@
         <developerConnection>
             scm:git:git@github.com:fusion-oss/${project.artifactId}.git
         </developerConnection>
-        <tag>HEAD</tag>
+        <tag>commons-jaxb-java-8-0.1</tag>
         <url>https://github.com/fusion-oss/${project.artifactId}</url>
     </scm>
 
